From PyCS to PyCS3
==================


pycs
----
    gen
    ---
        lc.py
        --------------
        - rename class "lightcurve" as "LightCurve" (CapWords convention)
        - In LightCurve constructor (__init__):
            - simplify the docstrings
            - remove the labels attribute
            - remove the commentlist attribute
            - remove the showlabels attribute
        - Simplify LightCurve.__str__ docstring and remove unused bit of code

        lc_func.py
        --------------
        - moved all functions related to list of LigthCurve to this module

        spl_func.py
        --------------
        - moved all functions related to Splines manipulation to this module

        datapoints.py
        --------------
        - moved the DataPoints class to this module

    regdiff
    ---
        scikitgp.py
        -------------
        - replaced the module pymcgp.py tp scikitgp.py. New implementation of the Gaussian Process based on scikit-learn

        rslc.py
        -------------
        - renamed class Rslc (Capwords convention)

    sim
    ---
        run.py
        ------------
        - renamed Class RunResults
        - added method get_delays_from_ts()

        twk.py
        ------
        -suppressed addspl function.

        src.py
        -------------
        -renamed spline() method in generate_spline() to avoid name conflict

    comb
    ---
        plot.py
        -------
        -moved the function delayplot from sim.plot

        comb.py
        -------
        - getresults() now required that the CSContainer have the _errobars.pkl and _dalys.pkl files
        - In CSContainer constructor (__init__):
            - only the name of the CSCOntainer is now mandatory
        - bug fix in the colour transmission between CSContainer and Group


tests
-----
- Add tests scripts for Continuous Integration


docs
----
- Add a sphinx documentation source code